[tool.poetry]
name = "mtcnn-pytorch"
version = "0.1.0"
description = "A PyTorch implementation for MTCNN"
authors = ["Yurzi <yurzi@foxmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mtcnn"}]

[tool.poetry.dependencies]
python = "^3.10"
wandb = "^0.15.0"
easydict = "^1.10"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
